package com.directi.training.isp.exercise_refactored;

public interface SensorDependant {
    void proximityCallback();
}
