package com.directi.training.isp.exercise_refactored;

public interface Timed {
    void timeOutCallback();
}
